--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" href="assets/images/logo.png" type="image/gif" sizes="16x16">
+  <link rel="icon" href="assets/images/logo.png" type="image/gif">
   <title>Rubel Rana | Resume</title>
 
 
@@ -12,8 +12,6 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 
-
-  <link rel="stylesheet" href="assets/css/resume.css">
   <link rel="stylesheet" href="style.css">
 
 </head>
@@ -122,7 +120,7 @@
                       </ul>
                     </div>
                     <div class="ex-heading loader">
-                      <h2 class="text-uppercase">EXEPIRIENCE</h2>
+                      <h2 class="text-uppercase">Experience</h2>
                     </div>
                     <div class="ex-box">
                       <h2>2010-2012</h2>
@@ -284,45 +282,45 @@
                       </div>
                       <div class="row no-margin mt-25">
                         <div class="col-md-12 heading-skills no-padding">
-                          <h3 class="text-uppercase">INTERSESTS</h3>
+                          <h3 class="text-uppercase">Interests</h3>
                         </div>
-                        <div class="col-md-4 intetst-box">
-                          <div class="intetst-icons">
+                        <div class="col-md-4 interest-box">
+                          <div class="interest-icons">
                             <i class="fa fa-plane" aria-hidden="true"></i>
                             <br><br>
                             <h5>TRAVEL</h5>
                           </div>
                         </div>
-                        <div class="col-md-4 intetst-box">
-                          <div class="intetst-icons">
+                        <div class="col-md-4 interest-box">
+                          <div class="interest-icons">
                             <i class="fa fa-headphones" aria-hidden="true"></i>
                             <br><br>
                             <h5>MUSIC</h5>
                           </div>
                         </div>
-                        <div class="col-md-4 intetst-box">
-                          <div class="intetst-icons">
+                        <div class="col-md-4 interest-box">
+                          <div class="interest-icons">
                             <i class="fa fa-file-video-o" aria-hidden="true"></i>
                             <br><br>
                             <h5>video</h5>
                           </div>
                         </div>
-                        <div class="col-md-4 intetst-box">
-                          <div class="intetst-icons">
+                        <div class="col-md-4 interest-box">
+                          <div class="interest-icons">
                             <i class="fa fa-bicycle" aria-hidden="true"></i>
                             <br><br>
                             <h5>CYCLING</h5>
                           </div>
                         </div>
-                        <div class="col-md-4 intetst-box">
-                          <div class="intetst-icons">
+                        <div class="col-md-4 interest-box">
+                          <div class="interest-icons">
                             <i class="fa fa-cutlery" aria-hidden="true"></i>
                             <br><br>
-                            <h5>COOCKING</h5>
+                            <h5>COOKING</h5>
                           </div>
                         </div>
-                        <div class="col-md-4 intetst-box">
-                          <div class="intetst-icons">
+                        <div class="col-md-4 interest-box">
+                          <div class="interest-icons">
                             <i class="fa fa-pied-piper-alt" aria-hidden="true"></i>
                             <br><br>
                             <h5>SPORTS</h5>
@@ -397,21 +395,21 @@
         <ul id="portfolio-list">
           <li class="illustration print">
             <a href="" class="folio">
-              <img src="assets/images/work3.jpg" alt="">
+              <img src="assets/images/1.jpg" alt="">
               <h2 class="title">Hello Goodbye</h2>
               <span class="categorie">Print / Illustration</span>
             </a>
           </li>
           <li class="webdesign">
             <a href="" class="folio">
-              <img src="assets/images/3-thumb.jpg" alt="">
+              <img src="assets/images/2.jpg">
               <h2 class="title">Hello Goodbye</h2>
               <span class="categorie">Web Design</span>
             </a>
           </li>
           <li class="illustration print">
             <a href="" class="folio">
-              <img src="assets/images/7-thumb.jpg" alt="">
+              <img src="assets/images/3.jpg" alt="">
               <h2 class="title">Hello Goodbye</h2>
               <span class="categorie">Print / Illustration</span>
             </a>
@@ -419,14 +417,14 @@
 
           <li class="webdesign">
             <a href="" class="folio">
-              <img src="assets/images/6-thumb.jpg" alt="">
+              <img src="assets/images/4.jpg" alt="">
               <h2 class="title">Hello Goodbye</h2>
               <span class="categorie">Web Design</span>
             </a>
           </li>
           <li class="illustration print">
             <a href="" class="folio">
-              <img src="assets/images/5-thumb.jpg" alt="">
+              <img src="assets/images/5.jpg" alt="">
               <h2 class="title">Hello Goodbye</h2>
               <span class="categorie">Print / Illustration</span>
             </a>
@@ -434,14 +432,14 @@
 
           <li class="webdesign">
             <a href="" class="folio">
-              <img src="assets/images/4-thumb.jpg" alt="">
+              <img src="assets/images/6.jpg" alt="">
               <h2 class="title">Hello Goodbye</h2>
               <span class="categorie">Web Design</span>
             </a>
           </li>
           <li class="illustration print">
             <a href="" class="folio">
-              <img src="assets/images/2-thumb.jpg" alt="">
+              <img src="assets/images/7.jpg" alt="">
               <h2 class="title">Hello Goodbye</h2>
               <span class="categorie">Print / Illustration</span>
             </a>
@@ -449,7 +447,14 @@
 
           <li class="webdesign">
             <a href="" class="folio">
-              <img src="assets/images/1-thumb.jpg" alt="">
+              <img src="assets/images/8.jpg" alt="">
+              <h2 class="title">Hello Goodbye</h2>
+              <span class="categorie">Web Design</span>
+            </a>
+          </li>
+          <li class="webdesign">
+            <a href="" class="folio">
+              <img src="assets/images/9.jpg" alt="">
               <h2 class="title">Hello Goodbye</h2>
               <span class="categorie">Web Design</span>
             </a>
@@ -462,10 +467,53 @@
       </section>
 
       <section id="contact">
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi consectetur delectus velit magni totam voluptatum saepe eveniet sed incidunt laboriosam minus libero temporibus tempora hic, vitae sunt distinctio dolores doloremque. Eius
-          corporis ratione tempora deleniti magni quidem illum dicta suscipit sint eveniet exercitationem totam ipsam aperiam odio, esse hic! Autem.
-        </p>
+        <div id="map">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d29199.787582069166!2d90.4368458661212!3d23.819543211529705!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755c62fce7d991f%3A0xacfaf1ac8e944c05!2sBasundhara%20Residential%20Area%2C%20Dhaka!5e0!3m2!1sen!2sbd!4v1581668912084!5m2!1sen!2sbd" width="300" height="100%" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+        </div>
+
+        <div class="contact-info">
+          <h3 class="main-heading text-capitalize"><span>Contact info</span></h3>
+          <ul>
+            <li>
+              <i class="fa fa-phone-square" aria-hidden="true"></i>
+              <span class="word-wrap text-lowercase">+880 100 000 0000</span>
+            </li>
+            <li>
+              <i class="fa fa-envelope-o" aria-hidden="true"></i>
+              <span class="word-wrap text-lowercase">rth.rubelrana@gmail.com</span>
+            </li>
+            <li>
+              <i class="fa fa-internet-explorer" aria-hidden="true"></i>
+              <span class="word-wrap text-lowercase">www.mdrubel.info</span>
+            </li>
+          </ul>
+        </div>
+
+        <div class="contact-form">
+          <h3 class="main-heading"><span>Let's keep in touch</span></h3>
+          <br><br>
+          <div id="contact-status">
+            <form action="" class="" id="contactform">
+              <div class="form-group">
+                <input type="text" id="name" class="form-control">
+                <label for="name" class="form-control-placeholder">Your Name</label>
+              </div>
+
+              <div class="form-group">
+                <input type="text" id="email" class="form-control">
+                <label for="email" class="form-control-placeholder">Your Email</label>
+              </div>
+
+              <label for="message">Your Message</label>
+              <textarea name="message" id="" cols="88" rows="7" class="textarea"></textarea>
+
+              <input type="submit" name="submit" value="Send" class="button transition text-uppercase">
+              <br><br><br><br>
+
+            </form>
+          </div>
+        </div>
+        
       </section>
 
 
@@ -481,7 +529,7 @@
       <div class="copyrights text-center">
         <p class="para">
           This template is made by
-          <a href="https://www.mdrubel.info" title="https://www.mdrubel.info" target="_blank"><span style="color: var(--primary-color);">Md. Rubel Rana</span></a> | Copyright &copy; 2020 All Rights Reserved.
+          <a href="https://www.mdrubel.info" title="https://www.mdrubel.info" target="_blank"><span>Md. Rubel Rana</span></a> | Copyright &copy; 2020 All Rights Reserved.
         </p>
       </div>
     </footer>
