Personal Portfolio Wordpress Theme

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" href="assets/images/logo.png" type="image/gif">
+  <link rel="icon" href="assets/images/favicon.png" type="image/gif">
   <title>Rubel Rana | Resume</title>
 
 
@@ -454,7 +454,7 @@
           </li>
           <li class="webdesign">
             <a href="" class="folio">
-              <img src="assets/images/9.jpg" alt="">
+              <img src="assets/images/9.png" alt="">
               <h2 class="title">Hello Goodbye</h2>
               <span class="categorie">Web Design</span>
             </a>
